[package]
name = "aqueue"
version = "1.0.3"
authors = ["luyi <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/aqueue"
documentation = "https://docs.rs/aqueue"
description = "fast speed thread safe async execute queue."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait="0.1"
concurrent-queue = "1.2"
async-oneshot = "0.5"
anyhow="1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version="0.5", features = [ "sqlite", "runtime-tokio-native-tls" ] }
async-trait="0.1"
dotenv = "0.15"
urandom="0.1"
