[package]
name = "aqueue"
version = "1.2.11"
authors = ["luyi <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/aqueue"
documentation = "https://docs.rs/aqueue"
description = "fast speed thread safe async execute queue."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokio_time = ["tokio/time"]
async_std_time = ["async-std/unstable"]

[dependencies]
async-trait = "0.1"
async-lock = "2.5"
tokio = { version = "1", optional = true }
async-std = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1.*", features = ["full"] }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
async-trait = "0.1"
dotenv = "0.15"
lazy_static = "1.4"
criterion = { version = "0.4.0", features = ["async_tokio"] }
futures-util = "0.3"
anyhow = "1.0"

[[bench]]
name = "bench"
harness = false